<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FAFAFF"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@raw/goal_image"
                android:layout_marginEnd="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/Goal_Card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_card_title"
                android:textAppearance="@style/goal_card_title"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/shapeableImageView" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_card_subtitle"
                android:textAppearance="@style/goal_card_subtitle"
                android:layout_below="@+id/Goal_Card_title"
                android:layout_toEndOf="@+id/shapeableImageView"
                android:layout_marginTop="1dp" />

            <RelativeLayout
                android:id="@+id/stroke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/shapeableImageView"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-65dp"
                android:layout_marginEnd="0dp">

                <com.mikhaellopez.circularprogressbar.CircularProgressBar
                    android:id="@+id/circularProgressBar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    app:cpb_background_progressbar_color="#F8F8F8"
                    app:cpb_background_progressbar_width="6dp"
                    app:cpb_progress_direction="to_right"
                    app:cpb_progressbar_width="10dp"
                    app:cpb_round_border="false" />

                <TextView
                    android:id="@+id/Pb_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="-37dp"
                    android:layout_marginTop="17dp"
                    android:layout_toEndOf="@+id/circularProgressBar"
                    android:text="@string/progress"
                    android:textAppearance="@style/progress" />

            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
