<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Food_Info">

    <include
        android:id="@+id/Food_Info_Header"
        layout="@layout/food_info_design"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/Food_Info_Header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/Rl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Food_Info_Description_Head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Food_Info_Description"
                    android:textAppearance="@style/Food_Info_Description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="9dp"
                    android:gravity="top" />

                <TextView
                    android:id="@+id/Food_Info_DescriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Food_Info_DescriptionText"
                    android:textAppearance="@style/Food_Info_DescriptionText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Food_Info_Description_Head"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/Rl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Food_Info_NutrientText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Food_Info_NutrientTxt"
                    android:textAppearance="@style/Food_Info_NutrientTxt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="9dp"
                    android:gravity="top" />


                <include
                    android:id="@+id/table_View"
                    layout="@layout/tablelayout_design"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Food_Info_NutrientText"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="27dp"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Food_Info_Fact_Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Food_Info_Fact_Heading"
                    android:textAppearance="@style/Food_Info_Fact_Heading"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="17dp"
                    android:gravity="top" />

                <include
                    android:id="@+id/Food_Info_Fact_Card"
                    layout="@layout/food_info_fact_card_design"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Food_Info_Fact_Heading"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginEnd="16dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Food_Info_Similar_Item_Head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Food_Info_Similar_Item_Head"
                    android:textAppearance="@style/Food_Info_Similar_Item_Head"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="16dp"
                    android:gravity="top" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Horizontal_RecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Food_Info_Similar_Item_Head"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="17dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Food_Info_Similar_Item_Head"
                    android:scrollbars="horizontal"
                    android:scrollbarFadeDuration="1000"/>
            </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
